infra/longhorn/httproute.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: longhorn
  namespace: longhorn-system
spec:
  parentRefs:
    - name: homelab
      namespace: envoy-gateway-system
  hostnames:
    - "longhorn.int.kyledev.co"
  rules:
    - backendRefs:
        - name: longhorn-frontend
          port: 80
