infra/longhorn/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  annotations:
    cert-manager.io/cluster-issuer: letsencrypt-prod
    nginx.ingress.kubernetes.io/auth-url: "http://tinyauth.tinyauth.svc.cluster.local:3000/api/auth/nginx"
    nginx.ingress.kubernetes.io/auth-signin: "http://tinyauth.int.kyledev.co/login?redirect_uri=https://longhorn.int.kyledev.co"
    ingress.kubernetes.io/secure-backends: "true"
  labels:
    app: longhorn-ingress
  name: longhorn
  namespace: longhorn-system
spec:
  ingressClassName: nginx
  rules:
    - host: longhorn.int.kyledev.co
      http:
        paths:
          - backend:
              service:
                name: longhorn-frontend
                port:
                  number: 80
            path: /
            pathType: Prefix
  tls:
    - hosts:
        - longhorn.int.kyledev.co
      secretName: longhorn-kyledev-tls-prod
